# public/swagger.yaml
@@ -166,6 +166,34 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/ValidationResponse"
+  /note/send_note_xml:
+    post:
+      tags:
+        - note
+      summary: Enviar el XML de una nota de credito generado
+      description: Retorna la respuesta de SUNAT y el XML firmado
+      operationId: sendNoteXml
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/FileDataNoteXml"
+        required: true
+      responses:
+        "200":
+          description: Operacion exitosa
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DocumentResponse"
+        "400":
+          description: Error de Validación
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/ValidationResponse"
   /note/pdf:
     post:
       tags:
@@ -1790,6 +1818,15 @@ components:
           type: string
           description: Ruc de la empresa
     FileDataSummaryXml:
+      type: object
+      properties:
+        filename:
+          type: string
+          description: Nombre de archivo
+        ruc:
+          type: string
+          description: Ruc de la empresa
+    FileDataNoteXml:
       type: object
       properties:
         filename:
