# src/Service/DocumentRequestXml.php
@@ -65,14 +65,12 @@ class DocumentRequestXml implements DocumentRequestXmlInterface
         $result = $see->sendXmlFile($xmlSigned);
 
         if (!$result->isSuccess()) {
-            // Mostrar error al conectarse a SUNAT.
             $objeto = [
                 "Codigo Error" => $result->getError()->getCode(),
                 "Mensaje Error" => $result->getError()->getMessage()
             ];
             return $this->json($objeto, 400);
         }
-        // Guardamos el CDR
         $dir_to_save = "./data_sunat/";
         if (!is_dir($dir_to_save)) {
             mkdir($dir_to_save);
@@ -97,7 +95,6 @@ class DocumentRequestXml implements DocumentRequestXmlInterface
         $filename = $document->filename;
         $ruc = $document->ruc;
 
-        //$file = $ruc.'-'.'RC'.'-'.$date.'-'.$correlativo.'.xml';
         $file = $filename.'.xml';
 
         $dir_to_save = "./data_sunat/";
@@ -107,7 +104,40 @@ class DocumentRequestXml implements DocumentRequestXmlInterface
         $result = $see->sendXmlFile($xmlSigned);
 
         if (!$result->isSuccess()) {
-            // Mostrar error al conectarse a SUNAT.
+            $objeto = [
+                "Codigo Error" => $result->getError()->getCode(),
+                "Mensaje Error" => $result->getError()->getMessage()
+            ];
+            return $this->json($objeto, 400);
+        }
+
+        $this->toBase64Zip($result);
+        $xml = $see->getFactory()->getLastXml();
+
+        $data = [
+            'xml' => $xml,
+            'hash' => $this->GetHashFromXml($xml),
+            'sunatResponse' => $result
+        ];
+
+        return $this->json($data);
+    }
+
+    public function send_note_xml(Request $request): Response
+    {
+        $document = json_decode($request->getContent());
+        $filename = $document->filename;
+        $ruc = $document->ruc;
+
+        $file = $filename.'.xml';
+
+        $dir_to_save = "./data_sunat/";
+        $xmlSigned = file_get_contents($dir_to_save.$file);
+
+        $see = $this->getSee($ruc);
+        $result = $see->sendXmlFile($xmlSigned);
+
+        if (!$result->isSuccess()) {
             $objeto = [
                 "Codigo Error" => $result->getError()->getCode(),
                 "Mensaje Error" => $result->getError()->getMessage()
